--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.containerX {
+  padding-left: 0;
+  padding-right: 0;
+  width: 100vw;
+  display: table-cell;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* 1em == 16px */
+@media only screen and (min-width: 48em) {
+  .containerX {
+    padding-left: 2em;
+    padding-right: 2em;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media only screen and (min-width: 64em) {
+  .containerX {
+    padding-left: 5em;
+    padding-right: 5em;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+@media only screen and (min-width: 75em) {
+  .containerX {
+    padding-left: 7em;
+    padding-right: 7em;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.box {
+  background-color: green;
 }
