using sass; added basic ui styling; actually got some cities to display in svg; got run button to display and function; imported old code base and working on integrating that

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,30 @@
+
+main {
+  min-height: 90vh;
+  padding: 1em;
+}
+
+footer {
+  background: lightcoral;
+  color: white;
+  padding: 1em;
+}
+
+
+a {
+  text-decoration: none;
+  padding: 1em;
+  background: rgba(0, 0, 0, 0.2);
+  color: white;
+  margin-right: 1em;
+  transition: .2s ease-in-out;
+  &:hover {
+    background: rgba(0, 0, 0, 0.4);
+  }
+
+}
+
+
 .containerX {
   padding-left: 0;
   padding-right: 0;
